Heights adapted, scroll bars and spacings corrected, changes for wp page and different devices

--- a/app/assets/stylesheets/content/_wiki.sass
+++ b/app/assets/stylesheets/content/_wiki.sass
@@ -172,9 +172,6 @@ blockquote
 
 body.controller-wiki
 
-  #content
-    overflow: initial
-
   .ck-content
     min-height: 25vh
 
