--- a/app/assets/stylesheets/layout/_base.sass
+++ b/app/assets/stylesheets/layout/_base.sass
@@ -82,7 +82,7 @@ body
   padding: 10px 20px
   width: auto
   height: calc(100vh - #{$header-height})
-  overflow: hidden
+  overflow: auto
   background-color: #fff
   width: 100%
   // As this is a flex item we need to set min-width to 0 so that its children's
@@ -114,8 +114,6 @@ body
 #content
   padding: 0
   margin: 0 0 0 0
-  height: 100%
-  overflow: auto
   width: 100%
   z-index: 10
   background-color: $body-background
