--- a/app/assets/stylesheets/layout/_main_menu_mobile.sass
+++ b/app/assets/stylesheets/layout/_main_menu_mobile.sass
@@ -29,8 +29,7 @@
 @include breakpoint(680px down)
 
   .main-menu
-    position: absolute !important
-    min-height: 100%
+    position: fixed
     z-index: 11
     border-bottom: 1px solid $main-menu-border-color
     width: 100vw !important
