--- a/app/assets/stylesheets/layout/work_packages/_mobile.sass
+++ b/app/assets/stylesheets/layout/work_packages/_mobile.sass
@@ -30,8 +30,7 @@
 
     // ------------- FULL SCREEN -------------------
     &.action-show
-      overflow: auto !important
-      overflow-y: scroll !important
+
 
       #main,
       #content-wrapper,
@@ -44,10 +43,11 @@
       #content-wrapper,
       #content
         height: 100% !important
-        overflow: visible
+        overflow: auto
 
       #main
         padding-bottom: 0
+        height: calc(100vh - #{$header-height})
 
         #content-wrapper
           &.hidden-navigation
@@ -105,7 +105,7 @@
 
     .work-packages-list-view--container
       padding-left: 5px
-      
+
     .toolbar-container
       min-height: 36px
       padding-right: 0
